openshift/deployment/env/dev/deployment.web_env.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platsrv-registry-web
spec:
  template:
    spec:
      containers:
        - name: platsrv-registry-web
