openshift/deployment/env/dev/route.dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: platsrv-registry-web
spec:
  host: platsrv-registry-web-101ed4.apps.silver.devops.gov.bc.ca
