openshift/deployment/env/dev/route.photo-sharing-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: platsrv-registry-web
spec:
  host: platsrv-registry-web-platform-registry-dev.apps.silver.devops.gov.bc.ca
